--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Cost Tracker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
           <div class="d-flex"><a class="nav-link" href="/login">Login</a></div>
           {% else %}
           <div class="d-flex">
-            <a class="nav-link" href="/signup">
+            <a class="nav-link" href="#">
             <img src="/static/images/user.svg" width="30" height="24" alt="{{ g.user.username }}">{{g.user.username}}</a></div>
           <div class="d-flex"><a class="nav-link" href="/logout">Logout</a></div>
           {% endif %} 
