--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -8,7 +8,7 @@
         <b>{{ event.evt_name }}</b>
       </div>
       <div class="col-md-4  mt-2">
-        <a  href="/event/expenses/{{event.id}}"><i>Show Expenses</a></i></a>  
+        <a  href="/event/expenses/{{event.id}}"><i>Split Expenses</a></i></a>  
       </div>
       <div class="w-100 mt-2"><hr></div>
      
