added changes to gui

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,10 @@
             <li class="nav-item">
               <a class="nav-link" href="/expenses/add_expense">Add Expense</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About</a>
+            </li>
           
           {% if (g.user) and (g.user.role == 'admin') %}
           <li class="nav-item">
