--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
       <a href="/signup">Sign Up</a> with venmo username and any password of your choice<br><br>
       <h6>Add new Events</a>, enter your expenses and compute your cost</h6>
       <h6>Make payments through Venmo API<h6>
+      <h6><a href="/demo/demo_app">A Quick Demo</a></h6>
     </div>
   </div>
 
