--- a/templates/expenses/payment.html
+++ b/templates/expenses/payment.html
@@ -14,11 +14,11 @@
         </div>
 
         <div class="col-md-2 ">
-          <b>Cost</b>
+          <b>Expense</b>
         </div>
 
         <div class="col-md-2 ">
-          <b>Cost Info</b>
+          <b>Info</b>
         </div>
         
         <div class="col-md-2">
