--- a/templates/expenses/add_expense_form.html
+++ b/templates/expenses/add_expense_form.html
@@ -25,7 +25,7 @@
           {{ field(placeholder= field.label.text, class="form-control") }}
         {% endfor %}
 
-        <button class="btn btn-primary btn-block btn-lg">Log in</button>
+        <button class="btn btn-primary btn-block btn-lg">Add Expense</button>
      </form>
     <br><br>
     <hr>
