changed name from event to group

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,12 +8,12 @@
     <h4 align="center"> The CostTracker app computes and splits your travel/restaurant expenses among friends</h4>
     <div  class= "box2 mt-4">
     <p>Have you gone on a trip with your friends and wondered how to split the 
-    cost of the total travel expenses? The Cost Tracker app will help you split 
-    the cost and make the payments to the individual bank accounts. 
+    expenses? The Cost Tracker app will help you split 
+    the expense and make the payments to the individual bank accounts. 
     </p>
     
     <p>This web app will provide an interface for each individual in the group to 
-    enter their cost and (Event)trip name. An algorithm will be used to determine the amount 
+    enter their expense and (Event)trip name. An algorithm will be used to determine the amount 
     that each individual will contribute. And a payment request or money will be sent to 
     each user’s venmo account using the venmo api through the Cost Tracker App. 
     A user gets money deposited or gets a request payment depending 
@@ -26,8 +26,8 @@
   <p><b>User Flow</b>
    <ul>
    <li>Sign Up/Login</li>
-   <li>Add Event: Creates A New Event</li>
-   <li>Add Expense: Select Event->Add Friend ->Enter Expense ->Submit Expense</li>
+   <li>Add Group: Creates A New Group</li>
+   <li>Add Expense: Select Group->Add Friend ->Enter Expense ->Submit Expense</li>
    <li>Split Expense -> View Payment/Expense Report</li>
    <li>Admin Settles the Balance </li>
    </ul>
