--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1>Events:</h1>
+  <h1>Groups:</h1>
   <div  align="center" class="container">
     {% for event in events %}
     <div class="row justify-content-md-center">
