--- a/templates/expenses/add_expense_form.html
+++ b/templates/expenses/add_expense_form.html
@@ -14,7 +14,7 @@
   <h1>Expense Form</h1>
  
   <div>
-    <h6>Select Event and Friend and enter expenses </h6><br>
+    <h6>Select Group and Friend and enter expenses </h6><br>
      <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
 
