--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/events/list">List Events</a>
+              <a class="nav-link" href="/events/list">List Groups</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/events/new">Add Events</a>
+              <a class="nav-link" href="/events/new">Add Groups</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/expenses/add_expense">Add Expense</a>
