--- a/templates/demo/demo_form.html
+++ b/templates/demo/demo_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h4>For demo purposes an event has been created and two friends have been added to the event</h4>
+  <h4>For demo purposes a group has been created and two friends have been added.</h4>
   {% if friend_list  %}
    <div>
     <b>Friend List:</b> [ &nbsp;
@@ -15,7 +15,7 @@
   {% endif %}
   
   <div>
-    <h6>Add expenses for the selected event and friend </h6><br>
+    <h6>Add expenses for the selected group and friend </h6><br>
     <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
 
