--- a/templates/events/add_event_form.html
+++ b/templates/events/add_event_form.html
@@ -2,7 +2,7 @@
 {% block content %}
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      <h1>Add Event</h1>
+      <h1>Add Group</h1>
       <form method="POST">
         {{ form.hidden_tag() }}
         {% for field in form if field.widget.input_type != 'hidden'%}
