change model to groups

--- a/templates/demo/demo_form.html
+++ b/templates/demo/demo_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h4>For demo purposes a group has been created and two friends have been added.</h4>
+  <h4>For demo purposes a group, {{gp_name}} has been created and two friends have been added.</h4>
   {% if friend_list  %}
    <div>
     <b>Friend List:</b> [ &nbsp;
@@ -35,47 +35,4 @@
   {% endblock %}
 
     
-    <!-- <h2 class="">Select Your Event.</h2>
-    <form method="POST" action="">
-      {{ event_form.hidden_tag() }}
-      {% for field in event_form if field.widget.input_type != 'hidden'%}
-        {% for error in field.errors  %}
-          <span class="text-danger">{{ error }}</span>
-        {% endfor %}
-        {{ field(placeholder=field.label.text, class="form-control") }}
-      {% endfor %}
-      <button class="btn btn-primary btn-block btn-lg">Split Expense</button>
-    </form> -->
-
-  <!-- <form method="POST">
-    {{ form.hidden_tag() }}
-    {% for field in form if field.widget.input_type != 'hidden'%}
-    <p>
-      {{field.label}}
-      {{field}}
-
-      {% for err in field.errors %}
-      {{err}}
-      {% endfor %}
-    </p>
-    {% endfor %}
-    <button>Submit</button>
-  </form> -->
-  <!-- <br><br>
-  <hr>
-  <h4>Select Event to get expense info</h4>
-  <form method="POST">
-    {{ event_form.hidden_tag() }}
-    {% for field in event_form if field.widget.input_type != 'hidden'%}
-    <p>
-      {{field.label}}
-      {{field}}
-
-      {% for err in field.errors %}
-      {{err}}
-      {% endfor %}
-    </p>
-    {% endfor %}
-    <button>Split Expenses</button>
-  </form> -->
-  
+    
