Changes to models

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
   </div>
   <div class="center mt-5 mb-4">
     
-    <h4 align="center"> The CostTracker app computes and splits your travel/restaurant expenses among friends</h4>
+    <h4 align="center"> The Cost Tracker app computes and splits your travel/restaurant expenses among friends</h4>
     <div  class= "box2 mt-4">
     <p>Have you gone on a trip with your friends and wondered how to split the 
     expenses? The Cost Tracker app will help you split 
@@ -13,7 +13,7 @@
     </p>
     
     <p>This web app will provide an interface for each individual in the group to 
-    enter their expense and (Event)trip name. An algorithm will be used to determine the amount 
+    enter their expense and (Group)trip name. An algorithm will be used to determine the amount 
     that each individual will contribute. And a payment request or money will be sent to 
     each user’s venmo account using the venmo api through the Cost Tracker App. 
     A user gets money deposited or gets a request payment depending 
@@ -23,6 +23,9 @@
   The users of the app just need to enter their expenses for the trip and their 
   expenses will be settled by the admin.
   </p>
+  <p>The app also has an internal messaging feature. Users can select their group and message.
+    Only the user who created the message can delete it.
+  </p>
   <p><b>User Flow</b>
    <ul>
    <li>Sign Up/Login</li>
@@ -30,6 +33,7 @@
    <li>Add Expense: Select Group->Add Friend ->Enter Expense ->Submit Expense</li>
    <li>Split Expense -> View Payment/Expense Report</li>
    <li>Admin Settles the Balance </li>
+   <li>Message: Select Group->Send Messages</li>
    </ul>
    Check the <a href="/demo/demo_app">Demo Account</a> for user experience
   </p>
