--- a/templates/expenses/payment.html
+++ b/templates/expenses/payment.html
@@ -166,5 +166,9 @@
   {% endfor %}
 </div>  
 
+<div class="mt-5">
+  <h6>Check Your <a href="/messages/{{ g.user.username }}">Message Board</a> to view or send messages</h6>
+</div>
+
 
 {% endblock %}
