--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -35,7 +35,15 @@ body.error-404 {
 .box {
   width: 100%;
   height: 300px;
-  border: 5px dashed #f7a239;
+  border: 1px dashed black;
+}
+
+.msgbox {
+  width: 100%;
+  height: auto;
+  border: 1px dashed black;
+
+  
 }
 
 .navbar a:hover {
@@ -74,6 +82,22 @@ span {
   color: green; 
 } 
 
+.msg_header { 
+  color: black; 
+  background-color: #d9d9d9;
+  color:blue
+} 
+
 .blue { 
   color: blue; 
+  
+} 
+
+.red {
+  color:red
+}
+
+.text { 
+  color: black; 
+  background-color: #e6e6e6;
 } 
