--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/static/stylesheets/style.css">
   <link rel="shortcut icon" href="/static/favicon.ico">
@@ -26,6 +28,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/groups/new">Add Groups</a>
             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/groups/join">Join Chat</a>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/expenses/add_expense">Add Expense</a>
             </li>
@@ -48,6 +53,7 @@
             <a class="nav-link" href="#">
             <img src="/static/images/user.svg" width="30" height="24" alt="{{ g.user.username }}">{{g.user.username}}</a></div>
           <div class="d-flex"><a class="nav-link" href="/logout">Logout</a></div>
+          <div class="d-flex"><a class="nav-link" href="/messages/{{ g.user.username }}">Messages</a></div>
           {% endif %} 
         </div>
       </div>
