--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,16 @@
   <div class="box1 mt-5">
     <img src="/static/images/cost-sharing.png" width="250" height="250" alt="Example image"/>
   </div>
+  <hr>
   <div class="center mt-5 mb-4">
     
-    <h4 align="center"> The CostTracker app computes and splits your travel/restaurant expenses among friends</h4>
+    <h4 align="center"> The Cost Tracker app computes and splits your travel/restaurant expenses among friends</h4>
     <div align="center" class= "box2 mt-4">
       <a href="/signup">Sign Up</a> with venmo username and any password of your choice<br><br>
-      <h6>Add new Events</a>, enter your expenses and compute your cost</h6>
+      <h6>Add new Groups</a>, enter your expenses and compute your cost</h6>
       <h6>Make payments through Venmo API<h6>
-      <h6><a href="/demo/demo_app">A Quick Demo</a></h6>
+      <h6>Message your friends through the Message Dashboard</h6>
+      <h6><a href="/demo/demo_app" class="btn btn-primary btn-block">Quick Demo</a></h6>
     </div>
   </div>
 
