--- a/templates/users/admin_form.html
+++ b/templates/users/admin_form.html
@@ -20,9 +20,15 @@
       </form>
     </div>
   </div>
+  <hr>
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5 mt-3">
       <a href="/admin/remove">Remove Token From System</a>
+    </div>
+  </div>
+  <div class="row justify-content-md-center">
+    <div class="col-md-7 col-lg-5 mt-3">
+      <a href="/admin/addGp">Add Common Message Group</a>
     </div>
   </div>
 
