kept the name costtracker

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
     <p>This web app will provide an interface for each individual in the group to 
     enter their expense and (Group)trip name. An algorithm will be used to determine the amount 
     that each individual will contribute. And a payment request or money will be sent to 
-    each user’s venmo account using the venmo api through the Cost Tracker App. 
+    each user’s venmo account using the venmo api through the Expense Tracker App. 
     A user gets money deposited or gets a request payment depending 
     upon their contribution to the trip.
   </p>
