--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<h4 class="mt-2" align="center"> The Cost Tracker app computes and splits your travel/restaurant expenses among friends</h4>
   <div class="box1 mt-5">
     <img src="/static/images/cost-sharing.png" width="250" height="250" alt="Example image"/>
   </div>
   <hr>
-  <div class="center mt-5 mb-4">
-    
-    <h4 align="center"> The Cost Tracker app computes and splits your travel/restaurant expenses among friends</h4>
+  <div class="center mt-2 mb-4">
     <div align="center" class= "box2 mt-4">
       <a href="/signup">Sign Up</a> with venmo username and any password of your choice<br><br>
       <h6>Add new Groups</a>, enter your expenses and compute your cost</h6>
